--- a/app/apps-v2.json
+++ b/app/apps-v2.json
@@ -86,5 +86,15 @@
       "type": "addon",
       "url": "https://github.com/john-hu/kill-all-active-apps",
       "revision": "1da69da899791e1e337ece9bc3c25f51182c17c8"
+    },
+    "https://novia713.github.io/monchi-dificil/update.webapp": {
+      "manifestURL": "https://novia713.github.io/monchi-dificil/update.webapp",
+      "name": "MONCHI Difficult Mode",
+      "description": "Experimental cool stuff for Monchi Game",
+      "icon": "https://novia713.github.io/monchi-dificil/icons/orange-monchi128.png",
+      "author": "Leandro713",
+      "type": "addon",
+      "url": "https://github.com/novia713/monchi-dificil/tree/gh-pages",
+      "revision": "ff869c9dd865cd0167d8b44c56d22dc739037d3c"
     }
 }
